--- a/web/src/app/modules/overview/components/object-status/object-status.component.html
+++ b/web/src/app/modules/overview/components/object-status/object-status.component.html
@@ -6,12 +6,12 @@
     <div class="card-block">
       <div class="card-title">
         <span *ngIf="node && !node.path">{{node.name}}</span>
-        <app-content-switcher *ngIf="node && node.path" [view]="node.path"></app-content-switcher>
+        <app-dynamic-view *ngIf="node && node.path" [view]="node.path"></app-dynamic-view>
       </div>
       <div *ngIf="node" class="card-text">
         <ul class="node-status">
           <li *ngFor="let detail of node.details; trackBy: detailsTrackBy">
-            <app-content-switcher [view]="detail"></app-content-switcher>
+            <app-dynamic-view [view]="detail"></app-dynamic-view>
           </li>
         </ul>
       </div>
