--- a/web/src/app/modules/overview/components/datagrid/datagrid.component.html
+++ b/web/src/app/modules/overview/components/datagrid/datagrid.component.html
@@ -21,7 +21,7 @@
             </clr-dg-column>
             <clr-dg-row *clrDgItems="let row of rows; trackBy: identifyRow">
                 <clr-dg-cell *ngFor="let column of columns; trackBy: identifyColumn">
-                    <app-content-switcher [view]="row[column]"></app-content-switcher>
+                    <app-dynamic-view [view]="row[column]"></app-dynamic-view>
                 </clr-dg-cell>
             </clr-dg-row>
 
