--- a/web/src/app/modules/overview/components/flexlayout/flexlayout.component.html
+++ b/web/src/app/modules/overview/components/flexlayout/flexlayout.component.html
@@ -11,7 +11,7 @@
 <ng-container *ngIf="view?.config?.sections">
   <div class="clr-row" *ngFor="let section of view?.config?.sections; trackBy: identifySection">
     <div class="clr-col-md-{{ item.width / 2 }} content-card-parent" *ngFor="let item of section; trackBy: identifySection">
-      <app-content-switcher [view]="item.view"></app-content-switcher>
+      <app-dynamic-view [view]="item.view"></app-dynamic-view>
     </div>
   </div>
 </ng-container>
