--- a/web/src/app/modules/overview/components/selectors/selectors.component.html
+++ b/web/src/app/modules/overview/components/selectors/selectors.component.html
@@ -1,3 +1,4 @@
 <div class="view-selectors">
-  <app-content-switcher [view]="selector" *ngFor="let selector of view?.config.selectors; trackBy: identifyItem"></app-content-switcher>
+    <app-dynamic-view [view]="selector"
+                      *ngFor="let selector of view?.config.selectors; trackBy: identifyItem"></app-dynamic-view>
 </div>
